<?xml version="1.0"?>
<package format="2">
  <name>relative</name>
  <version>0.0.1</version>
  <description>The relative package</description>

  <maintainer email="user@todo.todo">Your Name</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Run dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>message_runtime</exec_depend> <!-- message_runtime 추가 -->

  <export>
    <!-- 기타 의존성 -->
  </export>
</package>
